--- a/Suomea/src/suomea/resources/SuomeaView.properties
+++ b/Suomea/src/suomea/resources/SuomeaView.properties
@@ -30,3 +30,7 @@ StatusBar.busyIcons[11] = busyicons/busy-icon11.png
 StatusBar.busyIcons[12] = busyicons/busy-icon12.png
 StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
+exercisesMenu.text=Exercises
+statisticsMenu.text=Statistics
+vStatisticsMenuItem.text=Vocabulary statistics
+vtestMenuItem.text=Vocabulary test
