--- a/trunk/Suomea/src/suomea/resources/SuomeaAboutBox.properties
+++ b/trunk/Suomea/src/suomea/resources/SuomeaAboutBox.properties
@@ -2,13 +2,12 @@ title = About: ${Application.title} ${Application.version}
 
 closeAboutBox.Action.text = &Close
 
-appDescLabel.text=<html>${Application.description}
+appDescLabel.text=Java program to test your Finnish knowledge and learn
 
 versionLabel.text=Product Version\:
-
-vendorLabel.text=Vendor\:
 
 homepageLabel.text=Homepage\:
 
 #NOI18N
 imageLabel.icon=about.png
+jLabel1.text=new vocabulary.
