--- a/trunk/Suomea/src/suomea/resources/SuomeaApp.properties
+++ b/trunk/Suomea/src/suomea/resources/SuomeaApp.properties
@@ -1,10 +1,10 @@
 # Application global resources
 
 Application.name = Suomea
-Application.title = Basic Application Example
+Application.title = Suomea
 Application.version = 1.0
 Application.vendor = Sun Microsystems Inc.
-Application.homepage = http\://appframework.dev.java.net/
+Application.homepage = http://code.google.com/p/suomea/
 Application.description = A simple Java desktop application based on Swing Application Framework.
 Application.vendorId = Sun
 Application.id = ${Application.name}
