--- a/Suomea/nbproject/project.properties
+++ b/Suomea/nbproject/project.properties
@@ -21,10 +21,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/Suomea.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.sqlitejdbc-v056.jar=/home/drone/tmp/sqlitejdbc-v056.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-app-framework.classpath}
+    ${libs.swing-app-framework.classpath}:\
+    ${file.reference.sqlitejdbc-v056.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
