--- a/trunk/Suomea/src/suomea/resources/TestDialog.properties
+++ b/trunk/Suomea/src/suomea/resources/TestDialog.properties
@@ -1,6 +1,4 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-
-jLabel1.text=jLabel1
 nextButton.text=Next
 Form.title=Vocabulary test
+wordLabel.text=
+answerLabel.text=
