--- a/trunk/Suomea/nbproject/project.properties
+++ b/trunk/Suomea/nbproject/project.properties
@@ -20,13 +20,15 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Suomea.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.sqlitejdbc-v056.jar=/home/drone/tmp/sqlitejdbc-v056.jar
+file.reference.sqlitejdbc-v056.jar=lib/sqlitejdbc-v056.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${file.reference.sqlitejdbc-v056.jar}
+    ${file.reference.sqlitejdbc-v056.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
