Added column Dictionary in statistics

--- a/Suomea/src/suomea/resources/SuomeaView.properties
+++ b/Suomea/src/suomea/resources/SuomeaView.properties
@@ -34,3 +34,5 @@ exercisesMenu.text=Exercises
 vtestMenuItem.text=Vocabulary test
 vStatisticsMenuItem.text=Vocabulary statistics
 statisticsMenu.text=Statistics
+jMenuItem1.text=Select dictionary
+jMenuItem1.actionCommand=selectDictionaryDialog
