--- a/Suomea/nbproject/project.properties
+++ b/Suomea/nbproject/project.properties
@@ -22,13 +22,17 @@ dist.jar=${dist.dir}/Suomea.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.16.jar=lib/jcommon-1.0.16.jar
+file.reference.jfreechart-1.0.13.jar=lib/jfreechart-1.0.13.jar
 file.reference.sqlitejdbc-v056.jar=lib/sqlitejdbc-v056.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
     ${file.reference.sqlitejdbc-v056.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jfreechart-1.0.13.jar}:\
+    ${file.reference.jcommon-1.0.16.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
