--- a/trunk/Suomea/src/suomea/resources/StatisticsDialog.properties
+++ b/trunk/Suomea/src/suomea/resources/StatisticsDialog.properties
@@ -1,10 +1,12 @@
+graphPane.TabConstraints.tabTitle=Evolution graph
+jScrollPane2.TabConstraints.tabTitle=General statistics
+jLabel5.text=Dictionary
+jLabel4.text=Group by
+jLabel3.text=Exercise type
+dateTo.text=dd-mm-YYYY
+dateFrom.text=dd-mm-YYYY
+jLabel2.text=To date
+jLabel1.text=From date
 #NOI18N
 jPanel1.background=230, 221, 213
-jLabel1.text=From date
-jLabel2.text=To date
-jLabel3.text=Exercise type
-jLabel4.text=Group by
-jLabel5.text=Dictionary
-dateFrom.text=dd-mm-YYYY
-dateTo.text=dd-mm-YYYY
 RefreshStat.text=Refresh
