--- a/trunk/Suomea/src/suomea/resources/SuomeaView.properties
+++ b/trunk/Suomea/src/suomea/resources/SuomeaView.properties
@@ -36,3 +36,4 @@ vStatisticsMenuItem.text=Vocabulary statistics
 statisticsMenu.text=Statistics
 jMenuItem1.text=Select dictionary
 jMenuItem1.actionCommand=selectDictionaryDialog
+categoryTestMenuItem.text=Category test
