Refactor modules and begin with translator

--- a/Suomea/src/suomea/modules/translator/resources/TranslatorDialog.properties
+++ b/Suomea/src/suomea/modules/translator/resources/TranslatorDialog.properties
@@ -1,5 +1,4 @@
 jLabel1.text=Word to translate
 jButton1.text=Translate
-jLabel2.text=From language
-jLabel3.text=To language
+jLabel2.text=Language
 jTextField1.text=
