--- a/trunk/Suomea/src/suomea/resources/SuomeaView.properties
+++ b/trunk/Suomea/src/suomea/resources/SuomeaView.properties
@@ -32,8 +32,8 @@ StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
 exercisesMenu.text=Exercises
 vtestMenuItem.text=Vocabulary test
-vStatisticsMenuItem.text=Vocabulary statistics
+categoryTestMenuItem.text=Category test
+vStatisticsMenuItem.text=General statistics
 statisticsMenu.text=Statistics
 jMenuItem1.text=Select dictionary
 jMenuItem1.actionCommand=selectDictionaryDialog
-categoryTestMenuItem.text=Category test
