--- a/trunk/Suomea/src/suomea/resources/SuomeaView.properties
+++ b/trunk/Suomea/src/suomea/resources/SuomeaView.properties
@@ -37,3 +37,5 @@ vStatisticsMenuItem.text=General statistics
 statisticsMenu.text=Statistics
 jMenuItem1.text=Select dictionary
 jMenuItem1.actionCommand=selectDictionaryDialog
+toolsMenu.text=Tools
+translatorMenuItem.text=Translator
