--- a/Suomea/src/suomea/modules/translator/resources/TranslatorDialog.properties
+++ b/Suomea/src/suomea/modules/translator/resources/TranslatorDialog.properties
@@ -1,4 +1,6 @@
 jLabel1.text=Word to translate
-jButton1.text=Translate
 jLabel2.text=Dictionary
-jTextField1.text=
+translateButton.text=Translate
+#NOI18N
+translateButton.name=translateButton
+word.text=
