--- a/trunk/Suomea/src/suomea/resources/SuomeaView.properties
+++ b/trunk/Suomea/src/suomea/resources/SuomeaView.properties
@@ -31,7 +31,6 @@ StatusBar.busyIcons[12] = busyicons/busy-icon12.png
 StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
 exercisesMenu.text=Exercises
-vtestMenuItem.text=Vocabulary test
 categoryTestMenuItem.text=Category test
 vStatisticsMenuItem.text=General statistics
 statisticsMenu.text=Statistics
@@ -39,3 +38,4 @@ jMenuItem1.text=Select dictionary
 jMenuItem1.actionCommand=selectDictionaryDialog
 toolsMenu.text=Tools
 translatorMenuItem.text=Translator
+vocabularyTest.text=Vocabulary Test
